2007-06-09  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview2.defs: added (null-ok) to Buffer.set_language.
	* autogen.sh: do not fail when builddir != srcdir.

2007-06-03  Yevgen Muntyan  <muntyan@tamu.edu>

	Some little fixes.

	* test/test-widget.py: made it work, removed printing stuff.
	* gtksourceview2.override: some fixes here and there, corrected
        set_search_path() methods.
	* gtksourceview2.defs: renamed all SourceSomeThing to SomeThing;
	corrected GtkSourceBuffer and GtkSourceView constructors to make
	codegen do right thing; corrected SourceStyle.
	* configure.ac: require pygobject-2.8 instead of 2.10; removed sed
        script which removed -export-dynamic from PYGTKSOURCEVIEW_LIBS (there
        is no -export-dynamic, and it breaks things here).

=== pygtksourceview 1.90.0 ===

2007-06-03  Paolo Borelli  <pborelli@katamail.com>

	* configure.ac:
	* README:
	* NEWS:

	pygtksourceview 2.18.1 released

2007-06-03  Gian Mario Tagliaretti  <gianmt@gnome.org>
	
	* configure.ac: bump version to 1.90.0
	* Makefile.am: clean build, distcheck now works.
	* docs/reference/builddate.xml: deleted, it's a generated file.

2007-06-02  Paolo Borelli  <pborelli@katamail.com>

	* configure.ac: relax gtskourceview version requirements
	so that it builds against the 1.90.0 tarball.

2007-05-14  Paolo Borelli  <pborelli@katamail.com>

	* configure.ac:
	* Makefile.am:
	* pygtksourceview-2.0.pc.in:

	Install pygtksourceview-2.0.pc file

2007-05-13  Paolo Borelli  <pborelli@katamail.com>

	* Makefile.am: install gtksourceview2.defs

2007-05-12  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gtksourceview2.defs: added new enum type GtkSourceViewSmartHomeEndType
	
	* configure.ac: fix project link

2007-05-02  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gtksourceview2.override: (gtk_source_style_manager_get_search_path)
	use PyList instead of a PyTuple.

2007-05-02  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* initial import